# Mandelbrot-fractal

./: App.cpp  App.h  CMakeLists.txt  cint.cpp  cint.h  main.cpp
